--- a/src/components/style.css
+++ b/src/components/style.css
@@ -8,6 +8,10 @@ book-card {
   width: 200px;
   background-color: #fff;
   margin: 20px;
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 1);
 }
 book-title {
   font-size: 1em;
