--- a/src/components/style.css
+++ b/src/components/style.css
@@ -4,7 +4,7 @@
   padding: 0;
 }
 
-book-card {
+.book-card {
   width: 200px;
   background-color: #fff;
   margin: 20px;
@@ -12,8 +12,14 @@ book-card {
   flex-direction: column;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 1);
+  overflow: hidden;
 }
-book-title {
+.book-title {
   font-size: 1em;
   margin-bottom: 10px;
+}
+.book-author {
+  font-size: 0.9em;
+  margin-bottom: 10px;
+  color: #555;
 }
