--- a/src/components/style.css
+++ b/src/components/style.css
@@ -12,7 +12,11 @@
   flex-direction: column;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 1);
+  transition: transform 0.2s;
   overflow: hidden;
+}
+.book-card:hover {
+  transform: scale(1.1);
 }
 .book-title {
   font-size: 1em;
@@ -23,6 +27,9 @@
   margin-bottom: 10px;
   color: #555;
 }
-.book-cover{
-    width: 100%;
+.book-cover {
+  width: 100%;
+}
+.book-details {
+  padding: 1rem;
 }
