--- a/src/components/style.css
+++ b/src/components/style.css
@@ -33,3 +33,9 @@
 .book-details {
   padding: 1rem;
 }
+.book-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
