--- a/src/components/style.css
+++ b/src/components/style.css
@@ -39,6 +39,15 @@
   align-items: center;
   flex-wrap: wrap;
 }
-.book-description{
-    color: #777;
+.book-description {
+  color: #777;
+}
+.search-input {
+  width: 400px;
+}
+.search {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
